--- a/interfaces/Referral-App/src/index.html
+++ b/interfaces/Referral-App/src/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Helpful Information - Red Cross NL</title>
 
-<head>
-  <meta charset="utf-8" />
-  <title></title>
+    <base href="/" />
 
-  <base href="/" />
+    <meta
+      name="viewport"
+      content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <link rel="manifest" href="manifest.json" />
+    <meta name="theme-color" content="ffc001" />
+  </head>
 
-  <meta name="viewport"
-    content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <meta name="msapplication-tap-highlight" content="no" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <link rel="manifest" href="manifest.json" />
-  <meta name="theme-color" content="ffc001" />
-</head>
-
-<body>
-  <app-root></app-root>
-  <noscript>This application requires JavaScript to function.</noscript>
-</body>
-
+  <body>
+    <app-root></app-root>
+    <noscript>This application requires JavaScript to function.</noscript>
+  </body>
 </html>
