--- a/interfaces/Referral-App/src/index.html
+++ b/interfaces/Referral-App/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Helpful Information - Red Cross NL</title>
+    <title>Helpful Information | Red Cross NL</title>
 
     <base href="/" />
 
